--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </nav>
    
 
-    <div class="-mt-20 bg-cover bg-center bg-no-repeat" style="background-image: url('images/hero.png');">
+    <div class="-mt-20 bg-cover bg-center bg-no-repeat" style="background-image: url('images/Hero.png');">
         <div class="bg-gray-900 bg-opacity-50">
           <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
             <div class="text-left sm:text-center">
