--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="flex flex-col lg:flex-row justify-center lg:space-x-4 space-y-4 lg:space-y-0 items-center lg:items-stretch">
             <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Peraturan Permainan</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Peraturan Permainan</h5>
                 </a>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Pelajari aturan dasar dan strategi dalam American Football dan turunannya.</p>
                 <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-[#C93636] rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none">
@@ -200,7 +200,7 @@
             </div>
             <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Galeri Kegiatan</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Galeri Kegiatan</h5>
                 </a>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Jelajahi momen-momen seru dari berbagai kegiatan kami.</p>
                 <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-[#C93636] rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none">
@@ -212,7 +212,7 @@
             </div>
             <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
                 <a href="#">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Komunitas</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Komunitas</h5>
                 </a>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Bergabunglah dengan komunitas kami dan dukung olahraga ini berkembang.</p>
                 <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-[#C93636] rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none">
