--- a/index.html
+++ b/index.html
@@ -288,27 +288,27 @@
          <h1 class="font-bold text-4xl mb-4">Kompetisi Nasional</h1>
         <div class="">
             <div class="flex flex-col lg:flex-row justify-center lg:space-x-10 space-y-10 lg:space-y-0 items-center lg:items-stretch">
-                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100">
                     <div class="flex flex-col justify-between p-4 leading-normal">
                         <img class="w-12 h-12 mb-4" src="images/merbowl.png" alt="">
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Merdeka Bowl</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Event nasional yang mempertemukan tim-tim American Football dari berbagai regional di seluruh Indonesia.</p>
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Merdeka Bowl</h5>
+                        <p class="mb-3 font-normal text-gray-700">Event nasional yang mempertemukan tim-tim American Football dari berbagai regional di seluruh Indonesia.</p>
                     </div>
                 </a>
-                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100">
                  
                     <div class="flex flex-col justify-between p-4 leading-normal">
                         <img class="w-12 h-12 mb-4" src="images/Cobowl.png" alt="">
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">College Bowl</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Kompetisi nasional yang diikuti oleh tim-tim American Football dari berbagai institusi pendidikan dan universitas.</p>
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">College Bowl</h5>
+                        <p class="mb-3 font-normal text-gray-700">Kompetisi nasional yang diikuti oleh tim-tim American Football dari berbagai institusi pendidikan dan universitas.</p>
                     </div>
                 </a>
-                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
+                <a href="#" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100">
                     
                     <div class="flex flex-col justify-between p-4 leading-normal">
                         <img class="w-12 h-12 mb-4" src="images/NHSC.png" alt="">
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">National High School Competition</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Event nasional yang mempertandingkan tim-tim American Football dari berbagai SMA di Indonesia.</p>
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">National High School Competition</h5>
+                        <p class="mb-3 font-normal text-gray-700">Event nasional yang mempertandingkan tim-tim American Football dari berbagai SMA di Indonesia.</p>
                     </div>
                 </a>
             </div>
