--- a/01A - AAFI.html
+++ b/01A - AAFI.html
@@ -227,7 +227,7 @@
     <div class="mt-10">
         <div class="flex justify-between items-center">
             <h2 class="text-xl font-bold">Pengurus Organisasi</h2>
-            <a href="#" class="text-red-500 text-sm flex items-center">
+            <a href="01A - Pegurus Organisasi.html" class="text-red-500 text-sm flex items-center">
                 Lihat selengkapnya
                 <svg class="w-4 h-4 ml-1 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
