--- a/01C - Tim Nasional.html
+++ b/01C - Tim Nasional.html
@@ -273,7 +273,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Jadwal dan Hasil Pertandingan</h2>
-            <a href="#" class="text-red-500 text-sm flex items-center">
+            <a href="01C - Jadwal dan Hasil Pertandingan.html" class="text-red-500 text-sm flex items-center">
                 Lihat selengkapnya
                 <svg class="w-4 h-4 ml-1 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -342,7 +342,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Tim Putra</h2>
-            <a href="#" class="text-[#C93636] text-sm flex items-center">
+            <a href="01C - Tim Putra.html" class="text-[#C93636] text-sm flex items-center">
                 Lihat selengkapnya
                 <svg class="w-4 h-4 ml-1 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -406,7 +406,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Tim Putri</h2>
-            <a href="#" class="text-[#C93636] text-sm flex items-center">
+            <a href="01C - Tim Putri.html" class="text-[#C93636] text-sm flex items-center">
                 Lihat selengkapnya
                 <svg class="w-4 h-4 ml-1 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -470,7 +470,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Manajemen dan Pelatih</h2>
-            <a href="#" class="text-[#C93636] text-sm flex items-center">
+            <a href="01C - Manajemen dan Pelatih.html" class="text-[#C93636] text-sm flex items-center">
                 Lihat selengkapnya
                 <svg class="w-4 h-4 ml-1 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
