--- a/01C - Tim Putri.html
+++ b/01C - Tim Putri.html
@@ -189,6 +189,7 @@
         <li><a href="01C - Tim Putra.html" class="text-black">Tim Putra</a></li>
         <li><a href="01C - Tim Putri.html" class="font-bold bg-white text-[#C93636] p-1 rounded">Tim Putri</a></li>
         <li><a href="01C - Manajemen dan Pelatih.html" class="text-black">Manajemen dan Pelatih</a></li>
+        <li><a href="01C - Jadwal dan Hasil Pertandingan.html" class="text-black">Hasil dan Jadwal Pertandingan</a></li>
     </ul>
 </div>
 
