Update 01C - Jadwal dan Hasil Pertandingan.html

--- a/01C - Jadwal dan Hasil Pertandingan.html
+++ b/01C - Jadwal dan Hasil Pertandingan.html
@@ -203,7 +203,7 @@
         <h1 class="text-2xl font-bold">Hasil dan Jadwal Pertandingan</h1>
     </div>
     <!-- Header -->
-    <div class="flex justify-between items-center mb-4">
+    <div class="flex justify-between items-center mt-4 mb-4">
         <h2 class="text-xl font-bold">Jadwal Pertandingan</h2>
      </div>
 
@@ -248,7 +248,7 @@
         </div>
 
         <!-- Finished Match 2 -->
-        <div class="bg-white p-4 rounded-lg">
+        <div class="bg-white shadow-lg p-4 rounded-lg">
             <div class="flex justify-between items-center mb-2">
                 <span class="text-sm text-gray-500">29 Oktober 2024</span>
                 <span class="text-sm text-gray-500">10:30 AM</span>
